Fixed page-header regression align

--- a/frontend/styles/global/_scaffolding.scss
+++ b/frontend/styles/global/_scaffolding.scss
@@ -659,7 +659,7 @@ body {
 
     span:nth-of-type(2) {
 
-      flex: 2;
+      flex: 1;
       margin-left: 40px;
 
       @media screen and (max-width: $breakpoint-palm-portrait) {
